--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,11 +25,4 @@ jobs:
         sed -i.bak '/^AM_INIT_AUTOMAKE(\[-Wno-portability 1\.14\])$/s/14/11/' modules/oniguruma/configure.ac
     - name: install linux deps
       run: |
-        apt-get update && \
-        apt-get install -y \
-            flex \
-            bison \
-            libtool \
-            autoconf \
-            valgrind \
-            automake 
+        sudo -E apt-get -yq --no-install-suggests --no-install-recommends --force-yes install valgrind bison automake
