--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,5 +29,9 @@ jobs:
     - name: install pyenv
       run: |
         curl https://pyenv.run | bash
+        
         echo "::add-path::$HOME/.pyenv/bin:$PATH"
+        eval "$(pyenv init -)"
+        eval "$(pyenv virtualenv-init -)"
+
         pyenv install 3.6.7
